force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_Reason_for_Closure__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Reason_for_Closure__c</fullName>
    <label>Reason for Closure</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Revoked</fullName>
            </value>
            <value>
                <fullName>ODJFS Withdrawal</fullName>
            </value>
            <value>
                <fullName>CDJFS Withdrawal</fullName>
            </value>
            <value>
                <fullName>Voluntary Closure</fullName>
            </value>
            <value>
                <fullName>Settlement</fullName>
            </value>
            <value>
                <fullName>Recommendation Closed</fullName>
            </value>
            <value>
                <fullName>Created in Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>