force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_Reason_for_No_Investigation__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Reason_for_No_Investigation__c</fullName>
    <label>Reason for No Inspection</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No alleged licensing rule violations</fullName>
            </value>
            <value>
                <fullName>No 6 point serious risk violation</fullName>
            </value>
            <value>
                <fullName>License closed</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Created in Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>