force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_Reason_why_Suspension_Denied__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Reason_why_Suspension_Denied__c</fullName>
    <label>Reason why Suspension Denied</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Does not meet rule requirements</fullName>
            </value>
            <value>
                <fullName>Insufficient Evidence</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>