force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_Referral_Email__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Referral_Email__c</fullName>
    <label>Referral Email</label>
    <type>Email</type>
</CustomField>