force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_Referral_Phone__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Referral_Phone__c</fullName>
    <label>Referral Phone</label>
    <type>Phone</type>
</CustomField>