force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_Referral_Taken_by__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Referral_Taken_by__c</fullName>
    <inlineHelpText>Individual&apos;s Name</inlineHelpText>
    <label>Referral Made To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>