force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_Rejected_By_Manager__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Rejected_By_Manager__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set to True in the Approval Process when a Alleged Ops is rejected</description>
    <label>Rejected By Manager</label>
    <type>Checkbox</type>
</CustomField>