force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_Related_Case__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Related_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Case</label>
    <lookupFilter>
        <active>false</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <errorMessage>Related case must be the same record type as this case</errorMessage>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Alleged Ops Completed, Alleged Ops, Complaint, Complaint Submitted, Incident / Injury / Illness, Incident Injury Submitted, Alleged Ops Submitted</value>
        </filterItems>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <valueField>CLQ_Case_Custom__c.RecordTypeId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>CLQ_Case_Custom__c</referenceTo>
    <relationshipName>Cases_Custom</relationshipName>
    <type>Lookup</type>
</CustomField>