force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_Relationship_to_the_Program__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Relationship_to_the_Program__c</fullName>
    <description>Used for Complaints</description>
    <label>Relationship to Program</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Parent</fullName>
            </value>
            <value>
                <fullName>Staff</fullName>
            </value>
            <value>
                <fullName>County Agency</fullName>
            </value>
            <value>
                <fullName>PCSA</fullName>
            </value>
            <value>
                <fullName>Former Staff</fullName>
            </value>
            <value>
                <fullName>Former Parent</fullName>
            </value>
            <value>
                <fullName>Anonymous</fullName>
            </value>
            <value>
                <fullName>Neighbor</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>