force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_Reporters_Own_Children__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Reporters_Own_Children__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box if the reporter&apos;s children are involved.</description>
    <inlineHelpText>Check this box if the reporter&apos;s children are involved.</inlineHelpText>
    <label>Reporter&apos;s Own Children</label>
    <type>Checkbox</type>
</CustomField>