force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_Request_Suspension_Status__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Request_Suspension_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Request Suspension Status</label>
    <type>Checkbox</type>
</CustomField>