force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_Request_to_Close_Program_in_System__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Request_to_Close_Program_in_System__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Request to Close Program in System</label>
    <type>Checkbox</type>
</CustomField>