force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_Response_Time__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Response_Time__c</fullName>
    <formula>If(AND(CLQ_No_Investigation_Required__c == true,CLQ_Complete_Inspection__c == false),
   CLQ_Completed_Allegation_Review__c -  CLQ_Intake_Date__c,
   If(AND(CLQ_Complete_Inspection__c == true,CLQ_No_Investigation_Required__c == false),
      CLQ_Complete_Inspection_Date__c -  CLQ_Intake_Date__c,CLQ_Complete_Inspection_Date__c -  CLQ_Intake_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Response Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>