force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_Rule_Citation_in_Suspension_Order__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Rule_Citation_in_Suspension_Order__c</fullName>
    <label>Rule Citation in Suspension Order</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Child died or suffered serious injury</fullName>
            </value>
            <value>
                <fullName>PCSA Abuse or Neglect</fullName>
            </value>
            <value>
                <fullName>Charged with Abuse or Neglect</fullName>
            </value>
            <value>
                <fullName>Serious risk to health or safety</fullName>
            </value>
            <value>
                <fullName>Charged with Fraud</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>