force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_Seizure__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Seizure__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Seizure</label>
    <type>Checkbox</type>
</CustomField>