force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_Serious_Risk_Clarification__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Serious_Risk_Clarification__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CR #14753</description>
    <label>Unusual incident jeopardized safety</label>
    <type>Checkbox</type>
</CustomField>