force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_Six_Years_and_Older__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Six_Years_and_Older__c</fullName>
    <description>Number of involved children who are 6 years and older.</description>
    <inlineHelpText>Number of involved children who are between the ages 2 and 6.</inlineHelpText>
    <label>Six Years and Older</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>