force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_SourceId__c.field-meta.xml
<CustomField>
    <fullName>CLQ_SourceId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SourceId</label>
    <referenceTo>SocialPost</referenceTo>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>