force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_Sprain_Strain__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Sprain_Strain__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sprain / Strain</label>
    <type>Checkbox</type>
</CustomField>