force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_Start_Approval__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Start_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Start Approval</label>
    <type>Checkbox</type>
</CustomField>