force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_Status_Date__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Status_Date__c</fullName>
    <label>Status Date</label>
    <type>Date</type>
</CustomField>