force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_StopStartDate__c.field-meta.xml
<CustomField>
    <fullName>CLQ_StopStartDate__c</fullName>
    <label>Stopped Since</label>
    <type>DateTime</type>
</CustomField>