force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_Submitted_Date_Incident__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Submitted_Date_Incident__c</fullName>
    <label>Submitted Date</label>
    <type>Date</type>
</CustomField>