force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_Suspected_broken_bone_dislocation__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Suspected_broken_bone_dislocation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Suspected broken bone/dislocation</label>
    <type>Checkbox</type>
</CustomField>