force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_Threat_of_violence__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Threat_of_violence__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Threat of violence</label>
    <type>Checkbox</type>
</CustomField>