force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_Time_of_Incident__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Time_of_Incident__c</fullName>
    <description>Time when the incident/injury has occurred.</description>
    <inlineHelpText>Time when the incident/injury has occurred.</inlineHelpText>
    <label>Time of Incident</label>
    <type>DateTime</type>
</CustomField>