force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_Times_To_Call_Back__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Times_To_Call_Back__c</fullName>
    <label>Times To Call Back</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>8 am to 12 pm</fullName>
            </value>
            <value>
                <fullName>12 pm to 2 pm</fullName>
            </value>
            <value>
                <fullName>2 pm to 5 pm</fullName>
            </value>
            <value>
                <fullName>After 5 pm</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>