force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_Tooth_injury__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Tooth_injury__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tooth injury</label>
    <type>Checkbox</type>
</CustomField>