force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_Two_Years_to_Six_Years__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Two_Years_to_Six_Years__c</fullName>
    <description>Number of involved children who are between the ages 2 and 6.</description>
    <inlineHelpText>Number of involved children who are between the ages 2 and 6.</inlineHelpText>
    <label>Two Years to Six Years</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>