force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_Type_of_Child_Incident__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Type_of_Child_Incident__c</fullName>
    <label>Type of Child Incident</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Abuse of child by any adult</fullName>
            </value>
            <value>
                <fullName>Child unattended off-site program</fullName>
            </value>
            <value>
                <fullName>Child unattended on-site inside program</fullName>
            </value>
            <value>
                <fullName>Child Unattended On-site Outside Program</fullName>
            </value>
            <value>
                <fullName>Death of a Child</fullName>
            </value>
            <value>
                <fullName>Inappropriate touching/sexual play (between children or adult and children)</fullName>
            </value>
            <value>
                <fullName>Intruder Enters the Program</fullName>
            </value>
            <value>
                <fullName>Medication error</fullName>
            </value>
            <value>
                <fullName>Natural / Man-made Disaster</fullName>
            </value>
            <value>
                <fullName>Prohibitive discipline techniques(spanking included)</fullName>
            </value>
            <value>
                <fullName>Threat of violence</fullName>
            </value>
            <value>
                <fullName>Vehicle accident</fullName>
            </value>
            <value>
                <fullName>Weapon found</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>