force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_Type_of_Child_Injury_Illness__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Type_of_Child_Injury_Illness__c</fullName>
    <label>Type of Child Injury/Illness</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Allergic Reaction / Asthma Attack</fullName>
            </value>
            <value>
                <fullName>Blow or Bump to the Head</fullName>
            </value>
            <value>
                <fullName>Broken / Disclosed Bone</fullName>
            </value>
            <value>
                <fullName>Collapse / Faint</fullName>
            </value>
            <value>
                <fullName>Deep Cut / Laceration</fullName>
            </value>
            <value>
                <fullName>No Pulse / Not Breathing</fullName>
            </value>
            <value>
                <fullName>Object inserted into body part</fullName>
            </value>
            <value>
                <fullName>Outbreak of illness(County Health Department reportable)</fullName>
            </value>
            <value>
                <fullName>Poisoning</fullName>
            </value>
            <value>
                <fullName>Seizure</fullName>
            </value>
            <value>
                <fullName>Sprain / Strain</fullName>
            </value>
            <value>
                <fullName>Suspected broken bone/dislocation</fullName>
            </value>
            <value>
                <fullName>Tooth injury</fullName>
            </value>
            <value>
                <fullName>Other injury requiring medical treatment (Please describe below)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>