force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_UserId__c.field-meta.xml
<CustomField>
    <fullName>CLQ_UserId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases2</relationshipName>
    <type>Lookup</type>
</CustomField>