force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_Validation_Check__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Validation_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When the case status is submitted this checkbox will be true, which is used in the validation rule to not allow the help desk user to make the change to the case record.</description>
    <label>Validation Check</label>
    <type>Checkbox</type>
</CustomField>