force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_Vehicle_accident__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Vehicle_accident__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vehicle accident</label>
    <type>Checkbox</type>
</CustomField>