force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_Visit_Status__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Visit_Status__c</fullName>
    <label>Visit Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>To be Scheduled</fullName>
                <default>true</default>
                <label>To be Scheduled</label>
            </value>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>Visit Completed</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>