force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_Weapon_found__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Weapon_found__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Weapon found</label>
    <type>Checkbox</type>
</CustomField>