force-app/main/default/objects/CLQ_Case_Custom__c/fields/CLQ_Who_was_Involved_in_the_Incident__c.field-meta.xml
<CustomField>
    <fullName>CLQ_Who_was_Involved_in_the_Incident__c</fullName>
    <label>Who was Involved in the Incident</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Entire Group</fullName>
            </value>
            <value>
                <fullName>Entire Program</fullName>
            </value>
            <value>
                <fullName>One or more Individual Children</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>