force-app/main/default/objects/CLQ_Case_Custom__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <label>Internal Comments</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>