force-app/main/default/objects/CLQ_Case_Custom__c/fields/ContactFax__c.field-meta.xml
<CustomField>
    <fullName>ContactFax__c</fullName>
    <label>Contact Fax</label>
    <type>Phone</type>
</CustomField>