force-app/main/default/objects/CLQ_Case_Custom__c/fields/ContactMobile__c.field-meta.xml
<CustomField>
    <fullName>ContactMobile__c</fullName>
    <label>Contact Mobile</label>
    <type>Phone</type>
</CustomField>