force-app/main/default/objects/CLQ_Case_Custom__c/fields/ContactPhone__c.field-meta.xml
<CustomField>
    <fullName>ContactPhone__c</fullName>
    <label>Contact Phone</label>
    <type>Phone</type>
</CustomField>