force-app/main/default/objects/CLQ_Case_Custom__c/fields/DL_Inspection_Id__c.field-meta.xml
<CustomField>
    <fullName>DL_Inspection_Id__c</fullName>
    <formula>CASESAFEID(CLQ_Inspection__r.Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DL Inspection Id</label>
    <type>Text</type>
</CustomField>