force-app/main/default/objects/CLQ_Case_Custom__c/fields/EntitlementId__c.field-meta.xml
<CustomField>
    <fullName>EntitlementId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Entitlement</label>
    <referenceTo>Entitlement</referenceTo>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>