force-app/main/default/objects/CLQ_Case_Custom__c/fields/Inspection_Reason_If_Other_Describe__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Reason_If_Other_Describe__c</fullName>
    <label>If &apos;Other&apos; Describe</label>
    <length>100</length>
    <type>Text</type>
</CustomField>