force-app/main/default/objects/CLQ_Case_Custom__c/fields/IsEscalated__c.field-meta.xml
<CustomField>
    <fullName>IsEscalated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsEscalated</label>
    <type>Checkbox</type>
</CustomField>