force-app/main/default/objects/CLQ_Case_Custom__c/fields/Origin__c.field-meta.xml
<CustomField>
    <fullName>Origin__c</fullName>
    <label>Intake Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Web</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Face-to-Face</fullName>
            </value>
            <value>
                <fullName>Letter</fullName>
            </value>
            <value>
                <fullName>In Writing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>