force-app/main/default/objects/CLQ_Case_Custom__c/fields/Other_Agency__c.field-meta.xml
<CustomField>
    <fullName>Other_Agency__c</fullName>
    <description>[6/23/2017] CR#11238</description>
    <label>Other Agency</label>
    <length>18</length>
    <type>Text</type>
</CustomField>