force-app/main/default/objects/CLQ_Case_Custom__c/fields/Other_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Other_Relationship__c</fullName>
    <inlineHelpText>Required if selected &quot;Other&quot; for &quot;Relationship to program&quot; dropdown.</inlineHelpText>
    <label>Other Relationship</label>
    <length>128</length>
    <type>Text</type>
</CustomField>