force-app/main/default/objects/CLQ_Case_Custom__c/fields/Program_Id__c.field-meta.xml
<CustomField>
    <fullName>Program_Id__c</fullName>
    <formula>CLQ_Program__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Program Id</label>
    <type>Text</type>
</CustomField>