force-app/main/default/objects/CLQ_Case_Custom__c/fields/Program_Phone__c.field-meta.xml
<CustomField>
    <fullName>Program_Phone__c</fullName>
    <formula>CLQ_Program__r.CLQ_Phone__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Program Phone</label>
    <type>Text</type>
</CustomField>