force-app/main/default/objects/CLQ_Case_Custom__c/fields/Program_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Program_Record_Type__c</fullName>
    <formula>CLQ_Program__r.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Program Record Type</label>
    <type>Text</type>
</CustomField>