force-app/main/default/objects/CLQ_Case_Custom__c/fields/Review_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Review_Due_Date__c</fullName>
    <label>Review Due Date</label>
    <type>Date</type>
</CustomField>