force-app/main/default/objects/CLQ_Case_Custom__c/fields/SuppliedPhone__c.field-meta.xml
<CustomField>
    <fullName>SuppliedPhone__c</fullName>
    <label>Web Phone</label>
    <length>40</length>
    <type>Text</type>
</CustomField>