force-app/main/default/objects/CLQ_Case_Custom__c/recordTypes/CLQ_Alleged_Ops.recordType-meta.xml
<RecordType>
    <fullName>CLQ_Alleged_Ops</fullName>
    <active>true</active>
    <description>Use this record type when reporting against an unlicensed operation</description>
    <label>Alleged Ops</label>
</RecordType>