force-app/main/default/objects/CLQ_Case_Custom__c/recordTypes/CLQ_Alleged_Ops_Completed.recordType-meta.xml
<RecordType>
    <fullName>CLQ_Alleged_Ops_Completed</fullName>
    <active>true</active>
    <label>Alleged Ops Completed</label>
</RecordType>